--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,19 +1,20 @@
 body {
     font-family: Arial, sans-serif;
     padding: 2rem;
+    background: #d93b8b;
 }
 
-label, input, select {
+label,
+input,
+select {
     display: block;
     margin-bottom: 10px;
 }
 
-button {
+.agendar {
     background-color: #d93b8b;
     color: white;
     border: none;
     padding: 10px;
     cursor: pointer;
 }
- 
-
