--- a/src/main/resources/templates/agendamento.html
+++ b/src/main/resources/templates/agendamento.html
@@ -28,7 +28,7 @@
         <label for="hora">Hora:</label>
         <input type="time" th:field="*{hora}" required>
 
-        <button type="submit">Agendar</button>
+        <button class="agendar" type="submit">Agendar</button>
     </form>
 </body>
 </html>
